# eatellect_app

./: .env.example  .gitignore  README.md  app.py  main.py  packages.txt  pyproject.toml  requirements.txt  test_api.py
config/: settings.py
examples/: example_usage.py
src/: analyzer.py  barcode_scanner.py  health_analyzer.py  product_info.py
src/agents/: alternatives_node.py  nodes.py  parallel.py  routes.py
src/graph/: workflow.py
src/models/: llm_config.py
src/scripts/: generate_graph.py
src/state/: health_state.py
src/tools/: __init__.py  allergen_detector.py  barcode_scanner.py  health_calculator.py  nutrition_extractor.py  product_fetcher.py
